# pysqsh

./: .gitignore  README.rst  setup.cfg  tox.ini
.github/workflows/: tests.yml
sqsh/: __init__.py  sqsh.py
