[metadata]
name = pysqsh
description = Wrapper around sqsh to access Sybase ASE
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Stefan Beck
author_email = stefan.beck@hrz.uni-giessen.de
classifiers =

[options]
include_package_data = True
install_requires =
packages = sqsh
python_requires = >= 3.6
